[Update] Add Scroll bar in news and event

--- a/public/index.html
+++ b/public/index.html
@@ -353,7 +353,7 @@
 				<div class="box1">
 					<dl>
 						<dd class="top">News</dd>
-						<dd id="accordion" class="mid ">
+						<dd id="accordion" class="mid " style="height:500px; overflow-y:auto;">
               <!-- <div class="news-title "></div> -->
 							<div class="news-data" id="announcements">
 							  <p>Loading...</p>
@@ -371,7 +371,7 @@
 				<div class="box1" >
 					<dl>
 						<dd class="top">Events</dd>
-						<dd class="mid">
+						<dd class="mid" style="height:500px; overflow-y:auto;">
 							<dl class="event" id="upcoming_event">
   								<dd>Loading...</dd>
 							</dl>
