[Update] Remove link

--- a/public/index.html
+++ b/public/index.html
@@ -336,7 +336,7 @@
 					
 				</div>
         <div class="box1"  >
-          <a href="#" ><img alt="" src="images/fall.png" style="cursor:pointer;" /></a>
+          <img alt="" src="images/fall.png"  />
         </div>
         
 				<div class="box1"  style="text-align:center; position:relative; height:70px; margin-bottom:20px; text-align:left; background: url('images/lbl-tour-tickets.png') center top no-repeat; border:1px solid #e6e6e6; width:297px; display:none;">
