[Update] Make Change on faculty page

--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -201,28 +201,28 @@
 					
 					<tr>
 						<th >1st grade</th>
-						<td>Mrs. Gill</td>
-						<td>Teaching Asst:  Ms. Chilimidos</td>
+						<td>Mrs. Hanafee</td>
+						<td>Teaching Asst:  Mrs. Wong</td>
 					</tr>
 					<tr>
 						<th >2nd grade</th>
 						<td>Mrs. Mosbrucker</td>
-						<td>Teaching Asst:  Mrs. Wong</td>
+						<td>Co-Teacher:  Mrs. Mazzaferro</td>
 					</tr>
 					<tr>
 						<th >3rd grade</th>
 						<td>Miss Taricco</td>
-						<td>Teaching Asst:  Miss Manolakas<br/>3rd grade Aide: Mrs. Mazzaferro</td>
+						<td>&nbsp;</td>
 					</tr>
 					<tr>
 						<th >4th grade</th>
-						<td>Miss Hansen</td>
-						<td>Teaching Asst:  Ms. Wittle</td>
+						<td>Ms. Hansen</td>
+						<td>&nbsp;</td>
 					</tr>
 					<tr>
 						<th >5th grade</th>
 						<td>Mrs. Lanich</td>
-						<td>Teaching Asst:  Ms. Wittle</td>
+						<td>&nbsp;</td>
 					</tr>
 					<tr>
 						<th >6th grade</th>
@@ -236,8 +236,8 @@
 					</tr>
 					<tr>
 						<th >8th grade </th>
-						<td>Mr. Keating</td>
-						<td>Teaching Asst:  Mrs. McKnight</td>
+						<td>Mr. Sunderman</td>
+						<td>&nbsp;</td>
 					</tr>
 					<tr>
 						<th >6th /7th/8th grade Science/Math</th>
@@ -271,7 +271,7 @@
 					</tr>
 					<tr>
 						<th >Counselor</th>
-						<td>Mrs. Finnerty</td>
+						<td>Ms. Klemenhagen</td>
 						<td>&nbsp;</td>
 					</tr>
 					<tr>
