[Update] Add Teaching Asst:  Mrs. McKnight in 8th

--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -237,7 +237,7 @@
 					<tr>
 						<th >8th grade </th>
 						<td>Mr. Sunderman</td>
-						<td>&nbsp;</td>
+						<td>Teaching Asst:  Mrs. McKnight</td>
 					</tr>
 					<tr>
 						<th >6th /7th/8th grade Science/Math</th>
