[Update] Make change on holy day home tour

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -21,40 +21,47 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <blockquote>
           <p align="left"><BR>
             <B><FONT size=3>The Designers<br>
-            </FONT></B><FONT size=3><font size="2">The designers who are generously lending their time & talents to the tour:</font></FONT></p>
+            </FONT></B><FONT size=3><font size="2">The designers who are generously lending their time &amp; talents to the tour: </font></FONT></p>
           
-          <p><em>Haus Home Decor and Specialty Gift</em><br>
-            Jonathan Marquardt and Taige Clark<br>
-			5601 H Street<br/>
-			Sacramento, CA 95819<br/>
-			916-448-4100<br/>
-            <a href="http://www.hausbydr.com" target="_blank">www.hausbydr.com</a></p>
-          <p><em>Twiggs Floral Design Gallery<br>
-            </em>Wes Green<br>
-            3250 J Street<br>
-            Sacramento, CA 95816<br>
-			916-441-2303<br>
-            <a href="http://www.twiggsfloraldesign.com" target="_blank">www.twiggsfloraldesign.com</a></p>
-          <p><em>East Sac Florist</em><br>
-            Philip Rice<br>
-            5379 H Street<br>
-            Sacramento, CA 95816<br>
-            916-457-2699<br>
-            <a href="http://www.eastsacflorist.com" target="_blank">www.eastsacflorist.com</a></p>
-			<em>Beyond the Garden Gate</em><br/>
-			Pat Stromberg, Becky Heard and Nancy Storm<br/>
-			1015 Olive Drive, Davis, CA<br/>
-			530-756-6698
+          <p><em>Beyond the Garden Gate </em><br>
+            Pat Stromberg, Becky Heard and Nancy Storm <br>
+			1015 Olive Drive, Davis, CA <br/>
+			530-756-6698 <br/>
+            <a href="http://www.beyondthegardengates.com " target="_blank">http://www.beyondthegardengates.com </a></p>
+          <p><em>Holiday Home, Decorating Your Home For The Holidays <br>
+            </em>9255 Beatty Drive<br>
+            Sacramento, CA 95826<br>
+			916-396-7576  <br>
+            <a href="http://www.holidayhomedesigns.com" target="_blank">http://www.holidayhomedesigns.com</a></p>
+          <p><em>Kerrie Kelly Designs</em><br>
+            Kerrie Kelly<br>
+            3252 J Street<br>
+            Sacramento, CA 95816 <br>
+            916-919-3023 <br>
+            <a href="http://www.kerriekelly.com " target="_blank" target="_blank">www.kerriekelly.com </a></p>
+			<em>Lumens</em><br/>
+			Elizabeth Lake <br/>
+			2028 K Street <br/>
+			Sacramento, CA 95811 <br/>
+			916-444-5585 <br>
+			<a href="http://www.lumens.com/sacramentoshowroom.aspx" target="_blank">www.lumens.com/sacramentoshowroom.aspx</a>
 		  </p>	
-		  <p>Jill Dudensing <br/>
-      606-9041<br/>
-      <a href="http://www.Jilldudensing.com">www.Jilldudensing.com</a>
+		  <p><em>Twiggs Floral Design Gallery </em><br/>
+      Wes Green <br/>
+      3250 J Street <br/>
+       Sacramento, CA 95816 <br/>
+       916-441-2303 <br/>
+      <a href="http://www.twiggsfloraldesign.com">www.twiggsfloraldesign.com</a>
       </p>
-      <p>Gary T. Johns &amp; Assoc Interior Design<br/>
-      Gary Johns<br/>
-      3110 S Street<br/>
-      Sacramento, CA 95816<br/>
-      <a href="http://www.garyjohnsinteriordesign.com">www.garyjohnsinteriordesign.com</a>
+      <p><em>Angela Smith</em> <br/>
+      Public Sector Marketing <br/>
+      Printing and Personal Systems Group <br/>
+      Hewlett-Packard Company <br/>
+      <a href="mailto:angela.smith@hp.com">angela.smith@hp.com</a><br>
+      T 916-760-4408 <br>
+      M 916-712-1542<br>
+      Follow us on Twitter: @HPTeachExchange &amp; @HP_EDU<br>
+      LinkedIn: HP TechED 
       </p>
           </blockquote>
         <P>&nbsp; 
