[Update] Corrected Content

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -56,7 +56,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <p><em>Angela Smith</em> <br/>
       Public Sector Marketing <br/>
       Printing and Personal Systems Group <br/>
-      Hewlett-Packard Company <br/>
+      Hewlett-Packard Company <br/><br/>
       <a href="mailto:angela.smith@hp.com">angela.smith@hp.com</a><br>
       T 916-760-4408 <br>
       M 916-712-1542<br>
