[Update] Make Changes on Mass page

--- a/public/our-faith-3.html
+++ b/public/our-faith-3.html
@@ -211,11 +211,11 @@
             <tr><th>October 20</th><td>5:30pm</td><td>7th grade</td></tr>
             <tr><th>November 17</th><td>5:30pm</td><td>6th grade</td></tr>
             <tr><th>December 24 – Christmas Eve</th><td>4:00pm</td><td>&nbsp;</td></tr>
-            <tr><th>January 26</th><td>5:30pm</td><td>5th grade</td></tr>
+            <tr><th>January 27</th><td>9:30am</td><td>Student Council</td></tr>
             <tr><th>February 23</th><td>5:30pm</td><td>4th grade</td></tr>
             <tr><th>March 16</th><td>5:30pm</td><td>3rd grade</td></tr>
             <tr><th>April 20</th><td>5:30pm</td><td>2nd grade</td></tr>
-            <tr><th>May 18</th><td>5:30pm</td><td>1st grade</td></tr>
+            <tr><th>May 18</th><td>5:30pm</td><td>5th grade</td></tr>
 					</table>
 								
 				
