--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -182,8 +182,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
                 </font>
               </td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td>
-                <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+              <td>&nbsp;
+                <!-- <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
                 <u>Angela Smith </u><br/>
                 Public Sector Marketing <br/>
                 Printing and Personal Systems Group <br/>
@@ -193,7 +193,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
                 M 916-712-1542 <br/>
                 Follow us on Twitter: @HPTeachExchange & @HP_EDU <br/>
                 LinkedIn: HP TechED<br/>
-                </font>
+                </font>-->
               </td>
             </tr>
             <tr> 
