[Update] Add 47 Street Home

--- a/public/shpsholidayhometour.com/homes12/home3.htm
+++ b/public/shpsholidayhometour.com/homes12/home3.htm
@@ -17,6 +17,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 	          <a href="home3.htm" >45th Street</a></p>
       <p align=left><img src="../images/dot_red.JPG" width="9" height="8">
         <a href="home4.htm" >46th Street</a></p>
+      <p align=left><img src="../images/dot_red.JPG" width="9" height="8">
+        <a href="home5.htm" >47th Street</a></p>
 
 	  </TD>
       <TD class=bodytext vAlign=top width=594>
