--- a/public/shpsholidayhometour.com/homes12/home5.htm
+++ b/public/shpsholidayhometour.com/homes12/home5.htm
@@ -9,25 +9,24 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
   <TBODY>
   <TR>
     <TD class=leftnavtext vAlign=top align=left width=160><!--Start left nav area --><BR><BR>
-        <p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
-          <a href="home1.htm">40th Street</a></p>
-		<p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
-          <a href="home2.htm">42nd Street</a></p>
-		<p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
-          <a href="home3.htm" >44th Street</a></p>
-		<p align=left><img src="../images/dot_red.JPG" width="9" height="8">
-		  <a href="home4.htm" >45th Street</a></p>
-    <p align=left><img src="../images/dot_green.JPG" width="9" height="8">
-      <a href="home5.htm" >46th Street</a></p>
-    <p align=left><img src="../images/dot_red.JPG" width="9" height="8">
-      <a href="home6.htm" >6th Home</a></p>
+      <p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
+	          <a href="home1.htm">38th Street</a></p>
+			<p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
+	          <a href="home2.htm">42nd Street</a></p>
+			<p align=left><img src="../images/dot_red.JPG" width="9" height="8"> 
+	          <a href="home3.htm" >45th Street</a></p>
+      <p align=left><img src="../images/dot_red.JPG" width="9" height="8">
+        <a href="home4.htm" >46th Street</a></p>
+      <p align=left><img src="../images/dot_green.JPG" width="9" height="8">
+        <a href="home5.htm" >47th Street</a></p>
       </TD>
       <TD class=bodytext vAlign=top width=594>
         <!--Start main content area -->
         <blockquote> 
           <p align="left"><BR>
-            <B><FONT size=3>46th Street</FONT></B></p>
-          <p align="left"><img src="images/46th-street.jpg" alt="46th Street" title="46th Street"></p>
+            <B><FONT size=3>47th Street</FONT></B></p>
+          <p align="left">
+            <img src="images/47th-street.jpg" alt="47th Street" title="47th Street"></p>
           <p align="left">&nbsp;
           </p>
           </blockquote>
