--- a/public/shpsholidayhometour.com/homes09/41ststreet.htm
+++ b/public/shpsholidayhometour.com/homes09/41ststreet.htm
@@ -1,40 +1,1 @@
-<HTML><HEAD>
-<META http-equiv=Content-Type content="text/html; charset=windows-1252">
-<META content=no-cache><LINK href="../files/hhtCSS.css" type=text/css 
-rel=stylesheet>
-<META content= name=GENERATOR><title>Holiday Home Tour</title></HEAD>
-<BODY leftMargin=0 background=../images/back_line.gif topMargin=0>
-<TABLE id=AutoNumber1 style="BORDER-COLLAPSE: collapse" borderColor=#111111 
-cellSpacing=0 cellPadding=4 width=770 border=0>
-  <TBODY>
-  <TR>
-    <TD class=leftnavtext vAlign=top align=left width=160><!--Start left nav area --><BR><BR>
-        <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="38thstreet.htm">English 
-          Cottage</a> 
-        <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="40thstreet.htm"> 
-          Classic European Revival</a> 
-        <P align=left><img src="../images/dot_green.JPG" width="9" height="8"> 
-          <a href="41ststreet.htm">Contemporary Chateau</a> 
-        <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="42ndstreet.htm">Grand 
-          Bungalow </a> 
-        <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="45thstreet.htm"> 
-          French Eclectic</a>
-        <P align=left>&nbsp; 
-        <P align=left>&nbsp; 
-        <P align=center>&nbsp;</TD>
-      <TD class=bodytext vAlign=top width=594>
-        <!--Start main content area -->
-        <blockquote> 
-          <p align="left"><BR>
-            <B><FONT size=3>Contemporary Chateau</FONT></B></p>
-          <p align="left"><img src="41ststreet.jpg" width="400" height="324"></p>
-          <p align="left">The wide brick-framed walkway and welcoming porch of 
-            this charming Contemporary Chateau makes for a wonderful first impression 
-            as you stroll up the front walkway toward the entryway. This Contemporary 
-            Chateau with it’s Japanese Maples and rich landscape invite you in 
-            even further.</p>
-          <p align="left"><br>
-          </p>
-          </blockquote>
-        </TD>
-    </TR></TBODY></TABLE></BODY></HTML>
+<HTML><HEAD><META http-equiv=Content-Type content="text/html; charset=windows-1252"><META content=no-cache><LINK href="../files/hhtCSS.css" type=text/css rel=stylesheet><META content= name=GENERATOR><title>Holiday Home Tour</title></HEAD><BODY leftMargin=0 background=../images/back_line.gif topMargin=0><TABLE id=AutoNumber1 style="BORDER-COLLAPSE: collapse" borderColor=#111111 cellSpacing=0 cellPadding=4 width=770 border=0>  <TBODY>  <TR>    <TD class=leftnavtext vAlign=top align=left width=160><!--Start left nav area --><BR><BR>        <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="38thstreet.htm">English           Cottage</a>         <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="40thstreet.htm">           Classic European Revival</a>         <P align=left><img src="../images/dot_green.JPG" width="9" height="8">           <a href="41ststreet.htm">Contemporary Chateau</a>         <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="42ndstreet.htm">Grand           Bungalow </a>         <P align=left><img src="../images/dot_red.JPG" width="9" height="8"> <a href="45thstreet.htm">           French Eclectic</a>        <P align=left>&nbsp;         <P align=left>&nbsp;         <P align=center>&nbsp;</TD>      <TD class=bodytext vAlign=top width=594>        <!--Start main content area -->        <blockquote>           <p align="left"><BR>            <B><FONT size=3>Contemporary Chateau</FONT></B></p>          <p align="left"><a href="http://www.houseportraitsusa.com/" target="_blank"><img src="41ststreet.jpg" width="400" height="324"></a></p>          <p align="left">The wide brick-framed walkway and welcoming porch of             this charming Contemporary Chateau makes for a wonderful first impression             as you stroll up the front walkway toward the entryway. This Contemporary             Chateau with it’s Japanese Maples and rich landscape invite you in             even further.</p>          <p align="left"><br>          </p>          </blockquote>        </TD>    </TR></TBODY></TABLE></BODY></HTML>
