[Update] Change schoolyardapp to beehively

--- a/public/about-us-8.html
+++ b/public/about-us-8.html
@@ -178,7 +178,7 @@
 				<li class="li9 top"><a href="contact-us.html"><span>Contact Us</span></a></li>	
 				
 			</ul>
-			<div class="btn-login"><a href="https://sacredheart-sac.schoolyardapp.com/"><img src="images/btn-login-schoolyard.gif" alt="CM Schoolyard" /></a></div>
+			<div class="btn-login"><a href="https://sacredheart-sac.beehively.com/" target="_blank"><img src="images/btn-login-beehively.gif" alt="beehively.com" /></a></div>
 		</div>
 		
 	</div>
