--- a/public/parents-3.html
+++ b/public/parents-3.html
@@ -136,7 +136,7 @@
 				<li class="li9 top"><a href="contact-us.html"><span>Contact Us</span></a></li>	
 				
 			</ul>
-			<div class="btn-login"><a href="https://sacredheart-sac.schoolyardapp.com/"><img src="images/btn-login-schoolyard.gif" alt="CM Schoolyard" /></a></div>
+			<div class="btn-login"><a href="https://sacredheart-sac.beehively.com/" target="_blank"><img src="images/btn-login-beehively.gif" alt="beehively.com" /></a></div>
 		</div>
 		
 	</div>
@@ -173,7 +173,7 @@
 					<li>3 required hours at the Crab Feed/Auction</li>
 					<li>8 additional Family Service Hours</li>
 				</ul>
-				<p>Family service hours are recorded for the year from mid-May to the following mid-May.  Each family is responsible for knowing and understanding what qualifies for family service hours and for submitting them in a timely manner.  The family service tracking form can be downloaded from the Forms section in Schoolyard.</p>
+				<p>Family service hours are recorded for the year from mid-May to the following mid-May.  Each family is responsible for knowing and understanding what qualifies for family service hours and for submitting them in a timely manner.  The family service tracking form can be downloaded from the Forms section in Beehively.</p>
 				
 			</div>
 			<div class="col-200-r">			
