--- a/public/student-life-3.html
+++ b/public/student-life-3.html
@@ -136,7 +136,7 @@
 				<li class="li9 top"><a href="contact-us.html"><span>Contact Us</span></a></li>	
 				
 			</ul>
-			<div class="btn-login"><a href="https://sacredheart-sac.schoolyardapp.com/"><img src="images/btn-login-schoolyard.gif" alt="CM Schoolyard" /></a></div>
+			<div class="btn-login"><a href="https://sacredheart-sac.beehively.com/" target="_blank"><img src="images/btn-login-beehively.gif" alt="beehively.com" /></a></div>
 		</div>
 		
 	</div>
@@ -162,7 +162,7 @@
 				<p>The hot lunch program for Sacred Heart Parish School is provided by Happy Lunches.  Happy Lunches is owned and operated by Linda Moslehi who has been a chef for 30 years.  Miss Linda started her catering lunch program six years ago.</p>
 				<p>Happy Lunches is in compliance with the State of California Nutritional Services by supplying healthier alternatives for our children’s lunch program.   Along with a lunch that is of high nutritional value, a full salad bar is always included with each lunch ordered.</p>
 				<p>In addition, a snack bar is in operation during morning recess, featuring menu items such as breakfast burritos, bagels with cream cheese, fresh fruit cups and granola bars.</p>
-				<p>Lunch is ordered on a monthly basis.  Look for the order form under the Files tab of <a href="https://sacredheart-sac.schoolyardapp.com/"  alt="School Management Software - Schoolyard Login" title="School Management Software - Schoolyard Login" target="_blank">Schoolyard</a>.</p>
+				<p>Lunch is ordered on a monthly basis.  Look for the order form under the Files tab of <a href="https://sacredheart-sac.beehively.com/"  alt="School Management Software - Beehively Login" title="School Management Software - Beehively Login" target="_blank">Beehively</a>.</p>
 				
 			</div>
 			<div class="col-200-r">			
