[update]changes done as pe provided doc on 8aug2013

--- a/public/parents-5.html
+++ b/public/parents-5.html
@@ -166,10 +166,10 @@
 				<p>The Holiday Home Tour is a celebrated event that draws thousands to the “Fabulous 40s” to view homes decked out for the holidays by top decorators.  The Tour is a decades-long tradition and a favorite among families, parishioners and community members. </p>
 				<p>Spring brings the Annual Golf / Tennis Tournament as well as the Crab Feed (aka Spring Event).</p>
 				<ul class="bullet-list1">
-					<li>Fall Festival – October 1, 2011</li>
-					<li>Holiday Home Tour -December 2-4, 2011</li>
-					<li>Crab Feed (Spring Event)–February 11 (tent)</li>
-					<li>Golf/Tennis Tournament- May 11, 2012</li>
+					<li>Fall Festival – October  5, 2013</li>
+					<li>Holiday Home Tour - December 6 – 8, 2013</li>
+					<li>Crab Feed & Silent Auction – February 8, 2014 (tentative)</li>
+					<li>Golf/Tennis Tournament - May 9, 2014</li>
 				</ul>
 				
 			</div>
