[update]faculty and visitus page - text update

--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -250,14 +250,14 @@
 						<td>&nbsp;</td>
 					</tr>
 					<tr>
-						<th >Technology/Math</th>
+						<th >Library/Technology</th>
 						<td>Mrs. Terlecky</td>
 						<td>&nbsp;</td>
 					</tr>
 					
 					<tr>
-						<th >Physical Education/Art Director</th>
-						<td>Mr. Reel<!-- Mr. Domek --></td>
+						<th >Physical Education/Athletic Director</th>
+						<td>Mr. Reel</td>
 						<td>&nbsp;</td>
 					</tr>
 					<tr>
