--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -20,40 +20,40 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <!--Start main content area -->
         <blockquote>
           <p align="left"><BR>
-            <B><FONT size=3>The Designers<br>
-            </FONT></B><FONT size=3><font size="2">The designers who are generously lending their time &amp; talents to the tour: </font></FONT></p>
+            <B><FONT size=3>The Designers
+            </FONT></B></p>
+<p>
+<FONT size=3><font size="2">The designers who are generously lending their time &amp; talents to the tour: </font></FONT></p>
           
-          <p><em>Beyond the Garden Gate </em><br>
+          <p>
+						<em>Beyond the Garden Gate </em><br>
             Pat Stromberg, Becky Heard and Nancy Storm <br>
-			1015 Olive Drive, Davis, CA <br/>
-			530-756-6698 <br/>
-            <a href="http://www.beyondthegardengates.com " target="_blank">http://www.beyondthegardengates.com </a></p>
-          <p><em>Holiday Home, Decorating Your Home For The Holidays <br>
-            </em>9255 Beatty Drive<br>
-            Sacramento, CA 95826<br>
-			916-396-7576  <br>
+						1015 Olive Drive, Davis, CA <br/>
+						530-756-6698 <br/>
+            <a href="http://www.beyondthegardengates.com " target="_blank">http://www.beyondthegardengates.com </a>
+					</p>
+          <p>
+						<em>Haus Home Décor/Specialty Gift </em><br>
+            Jonathan Marquardt<br>
+            5601 H Street<br>
+						Sacramento, CA 95819<br>
+						916-448-4100 <br>
             <a href="http://www.holidayhomedesigns.com" target="_blank">http://www.holidayhomedesigns.com</a></p>
           <p><em>Kerrie Kelly Designs</em><br>
             Kerrie Kelly<br>
             3252 J Street<br>
             Sacramento, CA 95816 <br>
             916-919-3023 <br>
-            <a href="http://www.kerriekelly.com " target="_blank" target="_blank">www.kerriekelly.com </a></p>
-			<em>Lumens</em><br/>
-			Elizabeth Lake <br/>
-			2028 K Street <br/>
-			Sacramento, CA 95811 <br/>
-			916-444-5585 <br>
-			<a href="http://www.lumens.com/sacramentoshowroom.aspx" target="_blank">www.lumens.com/sacramentoshowroom.aspx</a>
-		  </p>	
-		  <p><em>Twiggs Floral Design Gallery </em><br/>
-      Wes Green <br/>
-      3250 J Street <br/>
-       Sacramento, CA 95816 <br/>
-       916-441-2303 <br/>
-      <a href="http://www.twiggsfloraldesign.com">www.twiggsfloraldesign.com</a>
-      </p>
-      
+            <a href="http://www.kerriekelly.com " target="_blank" target="_blank">www.kerriekelly.com </a>
+					</p>
+					<p>
+						<em>JIL Design </em><br/>
+						Irit Winston <br/>
+						1147 Eastern Avenue <br/>
+						Sacramento, CA 95864<br/>
+						916-485-7077 <br>
+						<a href="http://www.jildesign.com/" target="_blank">www.jildesign.com</a>
+		  		</p>	
           </blockquote>
         <P>&nbsp; 
           <!--End main content area -->
