[update]In HolidayHomTour change & add content on Designer page & add paypal button on Ticket page

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -33,12 +33,12 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             <a href="http://www.beyondthegardengates.com " target="_blank">http://www.beyondthegardengates.com </a>
 					</p>
           <p>
-						<em>Haus Home Décor/Specialty Gift </em><br>
-            Jonathan Marquardt<br>
+						<em>Haus Home and Gift </em><br>
             5601 H Street<br>
 						Sacramento, CA 95819<br>
 						916-448-4100 <br>
-            <a href="http://www.holidayhomedesigns.com" target="_blank">http://www.holidayhomedesigns.com</a></p>
+            <a href="http://www.haushomeandgift.com" target="_blank">www.haushomeandgift.com</a><br>
+            <a href="mailto:info@haushomeandgift.com">info@haushomeandgift.com</a></p>
           <p><em>Kerrie Kelly Designs</em><br>
             Kerrie Kelly<br>
             3252 J Street<br>
@@ -54,6 +54,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 						916-485-7077 <br>
 						<a href="http://www.jildesign.com/" target="_blank">www.jildesign.com</a>
 		  		</p>	
+		      <p>
+						<em>Steve Reynolds</em><br/>
+						<a href="mailto:stevereynoldsdesign@gmail.com">stevereynoldsdesign@gmail.com</a><br/>
+						916-801-0935
+			    </p>
           </blockquote>
         <P>&nbsp; 
           <!--End main content area -->
