[update]change on ticket and designer page of HHT

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -56,8 +56,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 		  		</p>	
 		      <p>
 						<em>Steve Reynolds</em><br/>
-						<a href="mailto:stevereynoldsdesign@gmail.com">stevereynoldsdesign@gmail.com</a><br/>
-						916-801-0935
+						
+						916-801-0935<br/><a href="mailto:stevereynoldsdesign@gmail.com">stevereynoldsdesign@gmail.com</a><br/>
 			    </p>
           </blockquote>
         <P>&nbsp; 
