[update] all pages banner update

--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/academics-3.jpg"/>	
+			<img alt="" src="images/contact-us.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Contact Us</div></div>	
 		</div>
 	</div>
