--- a/public/gift-giving.html
+++ b/public/gift-giving.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/student-life-7.jpg"/>	
+			<img alt="" src="images/gift-giving.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Gift Giving</div></div>	
 		</div>
 	</div>
