--- a/public/parents-1.html
+++ b/public/parents-1.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/our-faith-4.jpg"/>	
+			<img alt="" src="images/parents-1.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Advisory Commission </div></div>	
 		</div>
 	</div>
