--- a/public/admissions-1.html
+++ b/public/admissions-1.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/about-us-3.jpg"/>	
+			<img alt="" src="images/admissions-1.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Admission Guidelines  </div></div>	
 		</div>
 	</div>
