--- a/public/admissions-2.html
+++ b/public/admissions-2.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/about-us-8.jpg"/>	
+			<img alt="" src="images/admissions-2.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Application Forms</div></div>	
 		</div>
 	</div>
