--- a/public/admissions-4.html
+++ b/public/admissions-4.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/academics-3.jpg"/>	
+			<img alt="" src="images/admissions-4.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Visit Us</div></div>	
 		</div>
 	</div>
