--- a/public/student-life-1.html
+++ b/public/student-life-1.html
@@ -145,7 +145,7 @@
 	<!-- Start  banner-->
 	<div class="banner-innerpage" >
 		<div class="banner-inner-innerpage">
-			<img alt="" src="images/student-life-1.jpg"/>	
+			<img alt="" src="images/about-us-9.jpg"/>	
 			<div class="banner-title" ><div class="welcome-text">Counseling</div></div>	
 		</div>
 	</div>
