[update]changes in full sites ZD33174

--- a/public/about-us-7.html
+++ b/public/about-us-7.html
@@ -70,8 +70,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
@@ -163,20 +163,21 @@
 				<p>By registering their child(ren) at Sacred Heart Parish School, parents indicate their intention to accept and observe the school’s uniform dress code.</p>
 				<p>Sacred Heart Parish School students are to be in uniform starting the first day of school.  Uniforms are compulsory for both girls and boys.  Students are expected to follow standards of cleanliness, neatness, and modesty in everything they wear.  The school uniform must be worn at all times (except on non-uniform dress days).  Any violation of the uniform policy will result in age-appropriate responses being taken by homeroom teachers/administration for noncompliance including:  parent notification, parents called to campus to correct the violation, or disciplinary action (notice, probation, suspension, expulsion) for serious and/or habitual violations.</p>
 				<h3>Girls' Uniforms </h3>
-				<p>Grades K -3:    Shift or skort in Hamilton plaid</p>
+				<p>Grades TK -3:    Shift or skort in Hamilton plaid</p>
 				<p>Grades 4 – 8:  Shift or skort in Hamilton plaid; or knife pleat/box pleat skirt in Hamilton plaid</p>
-				<p><strong>NOTE:  Navy blue skirts are not allowed</strong></p>
-				<p><strong>Pants/Shorts:</strong>  Navy blue twill walking shorts that are no more than 3 inches above the knee, nor hemmed below the knee; navy blue twill long pants “Docker” style. No shorts or pants may be worn below the waistline.  NO CARGO PANTS OR SHORTS ARE ALLOWED.</p>
+				<p><strong>NOTE:  Navy blue skirts are not allowed</strong><br/>
+				<strong>**NOTE: Skirts are to be no shorter than 1” above the knee.</strong></p>
+				<p><strong>Pants/Shorts:</strong>  Navy blue twill walking shorts that are no more than 3 inches above the knee, nor hemmed below the knee; navy blue twill long pants “Docker” style. No shorts or pants may be worn below the waistline.  NO CARGO PANTS OR SHORTS ARE ALLOWED. No shorts/pants below the waistline.</p>
 				<p><strong>Shirts:</strong>  Plain white polo or peter-pan style shirts.  Red and navy polo shirts (with SHPS logo) from Dennis Uniform are an additional option. Shirts must have a collar and be tucked in.  White long-sleeve polo shirts from Dennis Uniform, and white turtlenecks under uniform shirts, may be worn during cold weather.</p>
-				<p><strong>Sweatshirts:</strong>  From Dennis Uniform only, SHPS red (grades k-8) or navy (grades 7 &amp; 8) with or without hoods. No other sweatshirts are allowed at school.  Uniform navy blue fleece vest or jacket.  Uniform red cardigan sweaters allowed for K – 8.</p>
+				<p><strong>Sweatshirts:</strong>  From Dennis Uniform only, SHPS red (grades TK-8) or navy (grades 7 &amp; 8) with or without hoods. No other sweatshirts are allowed at school.  Uniform navy blue fleece vest or jacket.  Uniform red cardigan sweaters allowed for TK – 8.</p>
 				<p><strong>Stockings:</strong>  Knee-hi or calf length crew sock in solid red, white or navy, NO LOGOs.  Red, white or navy tights may be worn during cold weather.  Other colors, or patterned socks or leg wear are not allowed.  Leg warmers or cropped leggings may not be worn. </p>
 				<p><strong>Shoes:</strong>  Shoes are to be worn at all times.  Shoes must have toes and heels enclosed.  Sandals, UGGS or other boots or clogs are not allowed.  Tennis shoes or athletic shoes are preferred.  All shoes must be tied, fastened or worn secured at all times (no exceptions).  On P.E. days, tennis shoes must be worn and tied in the traditional fashion.</p>
 				<p>All girls’ jumpers/skirts/skorts must be purchased from Dennis Uniform Company, 10266 Rockingham Drive, Suite 150, Sacramento, CA  95827.  Phone: (916) 361-6710.  Order online at:  <a href="http://www.dennisuniform.com" target="_blank">www.dennisuniform.com</a>.    Sacred Heart School Code is:  UFHSHS.  </p>
 				<p>PLEASE LABEL ALL ARTICLES OF CLOTHING.  The school accepts no responsibility for locating lost clothing.</p>
 				<h3>Boys' Uniforms</h3>
-				<p><strong>Pants/shorts:</strong>  All grades (K-8):  Navy blue twill walking shorts that are no more than 3 inches above the knee nor hemmed below the knee; navy blue twill long pants “Docker” style.  Beginning in 2nd grade, solid black or navy blue belts must be worn at all times with shorts/pants that have belt loops.  NO CARGO PANTS OR SHORTS ARE ALLOWED.</p>
+				<p><strong>Pants/shorts:</strong>  All grades (TK-8):  Navy blue twill walking shorts that are no more than 3 inches above the knee nor hemmed below the knee; navy blue twill long pants “Docker” style.  Beginning in 3rd grade, solid black or navy blue belts must be worn at all times with shorts/pants that have belt loops.  NO CARGO PANTS OR SHORTS ARE ALLOWED.</p>
 				<p><strong>Shirts:</strong>  Plain white polo shirts.  Red or blue polo shirts (with SHPS logo) from Dennis Uniform are additional options.  Shirts must have a collar and be worn tucked in.  White long sleeved polo shirts from Dennis Uniform, and white turtlenecks under uniform shirts, may be worn during cold weather.</p>
-				<p><strong>Sweatshirts:</strong>  From Dennis Uniform only, SHPS red (grades K-8) or navy (grades 7 &amp; 8), with or without hoods. No other sweatshirts are allowed at school.  Uniform navy blue fleece vest or jacket.  </p>
+				<p><strong>Sweatshirts:</strong>  From Dennis Uniform only, SHPS red (grades TK-8) or navy (grades 7 &amp; 8), with or without hoods. No other sweatshirts are allowed at school.  Uniform navy blue fleece vest or jacket.  </p>
 				<p><strong>Socks/Shoes:</strong>  Calf length crew sock in solid white, navy or red, NO LOGOs.  Shoes are to be worn at all times.  Shoes must have toes and heels enclosed.  Sandals, clogs, and boots are not allowed.  Tennis shoes or athletic shoes are preferred.  All shoes must be tied, fastened or worn secured at all times (no exceptions).  On P.E. days, tennis shoes must be worn and tied in the traditional fashion.</p>
 				
 				<p>Uniform items that are logo wear must be purchased from Dennis Uniform Company, 10266 Rockingham Drive, Suite 150, Sacramento, CA  95827.  Phone:  (916) 361-6710.  Order online at: <a href="http://www.dennisuniform.com" target="_blank">www.dennisuniform.com</a>.  Sacred Heart School Code is:  UFHSHS.</p>
@@ -197,8 +198,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
