--- a/public/admissions-4.html
+++ b/public/admissions-4.html
@@ -70,8 +70,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
@@ -160,9 +160,9 @@
 				
 				<h3>Visit Us</h3>
 				<p>Sacred Heart Parish School invites you to visit us!  <br/>You are invited to tour Sacred Heart on our Open House 
-        day, January 26, 2014, from 11am - 1pm.</p>
-				<p>Registration packets for the 2014/2015 school year (grades 1-8) will be available in March of 2014.</p>
-				<p><a href="images/sacred-heart-school-application.pdf" target="_blank">Applications for kindergarten (2013/2014) will be available October 1, 2013.</a>  Applications are available in the school office or may be downloaded at:  <a href="http://sacredheartschool.net/admissions-2.html">http://sacredheartschool.net/admissions-2.html</a>.</p>
+        day, January 25, 2015, from 11am - 1pm.</p>
+				<p>Registration packets for the 2015/2016 school year (grades 1-8) will be available in March of 2015.</p>
+				<p><a href="images/sacred-heart-school-application.pdf" target="_blank">Applications for TK and kindergarten (2015/2016) will be available October 1, 2014.</a>  Applications are available in the school office or may be downloaded at:  <a href="http://sacredheartschool.net/admissions-2.html">http://sacredheartschool.net/admissions-2.html</a>.</p>
 				
 				<p>Testing dates for prospective kindergarten students are February 24 - 28, 2014.</p>
 			</div>
