--- a/public/student-life-2.html
+++ b/public/student-life-2.html
@@ -70,8 +70,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
@@ -162,9 +162,8 @@
 				<p>Sacred Heart Parish School’s Extension Program offers quality care for children before school and after school for all regularly enrolled students.  Per Diocesan policy, Extension services operate only on days when school is in session.  The Extension Program offers computer enrichment and time set aside for homework, as well as games and snacks.  Extension services are not available when the school is closed or after school on days immediately prior to school vacations (Christmas, Easter, Summer).  Complete information on Extension fees and program policies are contained in the “Extension Program Guidelines” available through the school or Extension office.</p>
 				<p><strong>Morning Extension </strong>services begin at 7:00am and conclude at 8:00am.</p>
 				<p><strong>Afternoon Extension</strong> services begin immediately after school dismissal.  On regular school days Extension is open from 3:00pm – 6:00pm.  On minimum school days Extension is open from 12:00pm – 6:00pm.  Since the cafeteria is closed for lunch on minimum days, a bag lunch is required for all afternoon extension students.</p>
-				<h2>Full time Extension for Kindergarten:</h2>
-				<p>AM attendees – may utilize Extension from 7:00 am – 8:00 am, 11:00 am-6:00 pm<br/>
-					PM attendees – may utilize Extension from 7:00 am - 11:00 am, 3:00 pm – 6:00 pm</p>
+				<h2>Extended Care Options for Transitional Kindergarten and Kindergarten</h2>
+				<p>Several plans available beginning at 7:00am and ending at 6:00pm</p>
 				
 			</div>
 			<div class="col-200-r">			
