--- a/public/about-us-3.html
+++ b/public/about-us-3.html
@@ -71,8 +71,8 @@
             <li><a href="about-us-2.html">School History</a></li>
             <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
@@ -184,23 +184,23 @@
 					</tr>
 					<tr>
 						<th>One Student </th>
-						<td>$5,820 <!--$5,700-->  </td>
-						<td>$4,700 <!--$4,600-->  </td>
+						<td>$5,936 <!--$5,700-->  </td>
+						<td>$4,794<!--$4,600-->  </td>
 					</tr>
 					<tr>
 						<th>Two Students   </th>
-						<td>$10,910 <!--$10,550--> </td>
-						<td>$8,810 <!--$8,510--></td>
+						<td>$11,278 <!--$10,550--> </td>
+						<td>$9,109 <!--$8,510--></td>
 					</tr>
 					<tr>
 						<th>Three Students</th>
-						<td>$15,420 <!--$14,820--></td>
-						<td>$12,450 <!--$11,960--></td>
+						<td>$16,027 <!--$14,820--></td>
+						<td>$12,944 <!--$11,960--></td>
 					</tr>
 					<tr>
 						<th>Four or More Students </th>
-						<td>$19,350 <!--$18,530--></td> 
-						<td>$15,630 <!--$14,950--></td>
+						<td>$20,182 <!--$18,530--></td> 
+						<td>$16,300 <!--$14,950--></td>
 					</tr>
 				</table>
 				<p>$280 Registration Fee per Student              </p>
@@ -212,7 +212,7 @@
 					</tr>
 					<tr>
 						<th>Fees</th>
-						<td>Extension costs are on a per-child basis.  There are 3 plans to choose from. Registration Fee per Student - $125</td>
+						<td>Extension costs are on a per-child basis.  There are 4 plans to choose from. Registration Fee per Student - $125</td>
 					</tr>
 				</table>		
 					
@@ -228,8 +228,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
