--- a/public/academics-2.html
+++ b/public/academics-2.html
@@ -70,8 +70,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
@@ -163,7 +163,7 @@
 				<ul class="bullet-list1">
 					<li>Art</li>
 					<li>Computer Technology</li>
-					<li>Foreign Language</li>
+					<!--<li>Foreign Language</li>-->
 					<li>Music</li>
 				</ul>
 				<p>Volunteer docents enhance our student’s education with further lessons in art and science.</p>
