--- a/public/academics-4.html
+++ b/public/academics-4.html
@@ -70,8 +70,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
@@ -160,11 +160,11 @@
 				
 				<h3>Progress Reports</h3>
 				<p>At a minimum, progress reports will be mailed home at the mid-term of each trimester for students in grades 1 through 8.</p>
-				<h2>For 2013/2014 school year we will send home progress reports  on</h2>
+				<h2>For 2014/2015 school year we will send home progress reports on</h2>
 				<ul class="bullet-list1">
-					<li>October 4, 2013</li>
-					<li>January 17, 2014</li>
-					<li>April 17, 2014</li>
+					<li>October 3, 2014</li>
+					<li>January 16, 2015</li>
+					<li>April 24, 2015</li>
 				</ul>
 				<p>It is the responsibility of the student and parent to inquire at progress report time as to the steps which should be taken to correct any deficiency.  Families are reminded that the progress report is not a report card, but rather an indication of progress-to-date in a specific area.  Dates for sending Progress Reports home are also indicated on the school calendar.</p>
 				
