--- a/public/admissions-1.html
+++ b/public/admissions-1.html
@@ -70,8 +70,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
