--- a/public/parents-5.html
+++ b/public/parents-5.html
@@ -70,8 +70,8 @@
                         <li><a href="about-us-2.html">School History</a></li>
                         <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
-						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
-						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
+						<li><a href="about-us-5.html">Schoolwide Learning Expectations</a></li>
+						<!--<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>-->
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
@@ -166,10 +166,10 @@
 				<p>The Holiday Home Tour is a celebrated event that draws thousands to the “Fabulous 40s” to view homes decked out for the holidays by top decorators.  The Tour is a decades-long tradition and a favorite among families, parishioners and community members. </p>
 				<p>Spring brings the Annual Golf / Tennis Tournament as well as the Crab Feed (aka Spring Event).</p>
 				<ul class="bullet-list1">
-					<li>Fall Festival – October  5, 2013</li>
-					<li>Holiday Home Tour - December 6 – 8, 2013</li>
-					<li>Crab Feed & Silent Auction – February 8, 2014 (tentative)</li>
-					<li>Golf/Tennis Tournament - May 9, 2014</li>
+					<li>Fall Festival – October  4, 2014</li>
+					<li>Holiday Home Tour - December 5 – 7, 2014</li>
+					<li>Crab Feed – February 7, 2015 (tentative)</li>
+					<li>Tennis Tournament - TBD</li>
 				</ul>
 				
 			</div>
