[update]website changes zd33813

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -22,7 +22,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p align="left"><BR>
             <B><FONT size=3>The Designers
             </FONT></B></p>
-<p>
+<!--<p>
 <FONT size=3><font size="2">The designers who are generously lending their time &amp; talents to the tour: </font></FONT></p>
           
           <p>
@@ -31,7 +31,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 						1015 Olive Drive, Davis, CA <br/>
 						530-756-6698 <br/>
             <a href="http://www.beyondthegardengates.com " target="_blank">http://www.beyondthegardengates.com </a>
-					</p>
+					</p>-->
           <p>
 						<em>Haus Home and Gift </em><br>
             5601 H Street<br>
@@ -44,9 +44,17 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             3252 J Street<br>
             Sacramento, CA 95816 <br>
             916-919-3023 <br>
-            <a href="http://www.kerriekelly.com " target="_blank" target="_blank">www.kerriekelly.com </a>
+            <a href="http://www.kerriekelly.com " target="_blank">www.kerriekelly.com </a>
 					</p>
-					<p>
+		            <p><em>Stone Wood Design, Inc.</em><br>
+					  Janice Stone Thomas, ASID, CKD<br>
+					  900 46th Street<br>  
+					  Sacramento, CA  95819<br>
+					  916-454-1506 <br>
+					  <a href="mailto:swdesign@pacbell.net" target="_blank">swdesign@pacbell.net<br>
+					  <a href="http://www.stonewooddesign.com" target="_blank">www.stonewooddesign.com</a>
+		  					</p>
+					<!--<p>
 						<em>JIL Design </em><br/>
 						Irit Winston <br/>
 						1147 Eastern Avenue <br/>
@@ -58,7 +66,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 						<em>Steve Reynolds</em><br/>
 						
 						916-801-0935<br/><a href="mailto:stevereynoldsdesign@gmail.com">stevereynoldsdesign@gmail.com</a><br/>
-			    </p>
+			    </p>-->
           </blockquote>
         <P>&nbsp; 
           <!--End main content area -->
