[update]designer page changes

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -39,11 +39,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 						916-448-4100 <br>
             <a href="http://www.haushomeandgift.com" target="_blank">www.haushomeandgift.com</a><br>
             <a href="mailto:info@haushomeandgift.com">info@haushomeandgift.com</a></p>
-          <p><em>Kerrie Kelly Designs</em><br>
+          <p><em>Kerrie Kelly Design Lab</em><br>
             Kerrie Kelly<br>
-            3252 J Street<br>
-            Sacramento, CA 95816 <br>
-            916-919-3023 <br>
+			5704 Elvas Avenue<br>
+			Sacramento, CA 95819<br>
+			916-706-2089<br>
             <a href="http://www.kerriekelly.com " target="_blank">www.kerriekelly.com </a>
 					</p>
 		            <p><em>Stone Wood Design, Inc.</em><br>
