[updates]update thankyou page content.

--- a/public/shpsholidayhometour.com/thankyou.htm
+++ b/public/shpsholidayhometour.com/thankyou.htm
@@ -19,8 +19,21 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <blockquote> 
           <p align="left"><BR>
             <B><FONT size=3>Thank you for support</FONT></B></p>
-          <p>Thank you for supporting the Sacred Heart Holiday Home Tour. Your tickets have been purchased and are being held for you at will call.</p>
-		  <p>On Friday morning only, will-call will be located in the Mercy McMahon Terrace at 3865 J St. Will-call will move to Sacred Heart School, at 856 39th Street, at 12:30 pm on Friday. Will-call tickets will only be available for pick-up at the school after 12:30 on Friday. They are not available for pick-up at any of the houses. Will-call will remain at the school through the weekend.</p>
+          <p>Thank you for supporting the Sacred Heart Holiday Home Tour. Your ticket(s) have been purchased and will be available at Will Call. Will Call will be open during normal Home Tour weekend event times. </p>
+          <p>There are special Will Call times and locations for Friday <br>
+            9 a.m. - 12 p.m. - Mercy McMahon Terrace (3865 J Street) <br> 
+            12:30 p.m. - 7 p.m. - Sacred Heart School (856 39th Street)</p> 
+            <p>Saturday 10 a.m. - 6 p.m.- Sacred Heart School (856 39th Street) <br>
+              Sunday - 11 a.m. - 4 p.m. - Sacred Heart School (856 39th Street)</p>
+		      <p>
+          Please note that Will Call tickets cannot be pick up at any of the houses. They are only available at the above locations. <br>
+You may use your ticket for a one-time admittance to each house any time during the home tour hours. </p>
+
+<p>*Children over the age of 1 must have their own ticket. Organizers predict another sellout again this year and suggest advance purchases when possible.</p>
+<p>*Ticket sales are non-refundable. The home tour occurs rain or shine.</p>
+<p>Thanks again for your support!</p>
+
+
           <p> If you have any questions regarding the event or your tickets, please e-mail us at <a href="mailto:shhometour@gmail.com">shhometour@gmail.com</a></p>
           <p>The Sacred Heart Holiday Home Tour is now on Facebook. Like us at <a href="http://www.facebook.com/sacredhearthometour" target="_blank">www.facebook.com/sacredhearthometour</a>.</p>
           
